# sycl-word-cloud

./: .gitignore  CMakeLists.txt  README.md
data/: hamlet.txt  processed_hamlet.txt
src/parallel/: CMakeLists.txt  parallel-word-cloud.cpp
src/parallel_v2/: CMakeLists.txt  v2.cpp
src/serial/: CMakeLists.txt  word-cloud.cpp
src/simple-add/: CMakeLists.txt  simple-add-buffers.cpp  simple-add-usm.cpp
src/utils/: utils.cpp  utils.hpp
